Fix some spacing

--- a/src/web/views/EmployerListItem/EmployerListItem.scss
+++ b/src/web/views/EmployerListItem/EmployerListItem.scss
@@ -36,6 +36,10 @@ $scale-base: 16px;
 	.EmployerListItem__RatingText {
 		align-items: center;
 		display: flex;
+
+		.EmployerListItem__RatingIcon {
+			margin-left: 8px;
+		}
 	}
 
 	&.EmployerListItem__Rating--fair .EmployerListItem__RatingText {
